--- a/eshop-inventory/pom.xml
+++ b/eshop-inventory/pom.xml
@@ -72,11 +72,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
 
