--- a/eshop-storm/pom.xml
+++ b/eshop-storm/pom.xml
@@ -29,6 +29,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+      <version>4.12</version>
     </dependency>
     <dependency>
       <groupId>org.apache.storm</groupId>
